fix  MathJax setup

--- a/_posts/2025-10-11-welcome.md
+++ b/_posts/2025-10-11-welcome.md
@@ -6,6 +6,23 @@ tags: [Neuron, Dot Product, Activation Functions, Loss]
 author: James Huang
 ---
 
+<!-- ✅ MathJax setup -->
+<script>
+window.MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    displayMath: [['$$', '$$'], ['\\[', '\\]']],
+    processEscapes: true,
+  },
+  options: {
+    skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+  }
+};
+</script>
+<script type="text/javascript" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
 ## Introduction
 In this post, we’ll peel back the curtain on the core building blocks of neural networks. 
 
@@ -87,15 +104,15 @@ This unlocks **representation power**: instead of learning one decision boundary
 
 When we compute multiple neurons (a layer) at once, we can use matrix operations:
 
-\[
+$$
 \mathbf{z} = W \mathbf{x} + \mathbf{b}
-\]
+$$
 
 Where:
-- \( W \) is the **weight matrix** (each row is a neuron’s weights)
-- \( \mathbf{x} \) is the input vector
-- \( \mathbf{b} \) is the bias vector
-- \( \mathbf{z} \) is the output vector — one value per neuron
+- $ W $ is the **weight matrix** (each row is a neuron’s weights)  
+- $ \mathbf{x} $ is the input vector  
+- $ \mathbf{b} $ is the bias vector  
+- $ \mathbf{z} $ is the output vector — one value per neuron
 
 This is just **many dot products computed in parallel**.
 
@@ -183,33 +200,40 @@ Thus Softmax is typically used as the **final activation** in multi-class neural
 
 ### Math Formula
 
-Given a vector of logits \(\mathbf{z} = [z_1, z_2, \dots, z_K]\), the softmax output for class \(i\) is:
+Given a vector of logits $ \mathbf{z} = [z_1, z_2, \dots, z_K] $, the softmax output for class $ i $ is:
 
-\[
+$$
 \text{softmax}(\mathbf{z})_i = \frac{e^{z_i}}{\sum_{j=1}^{K} e^{z_j}}
-\]
+$$
 
-Key properties:
+**Key properties:**
 
-- Each \(\text{softmax}(\mathbf{z})_i \in (0, 1)\).  
-- The sum across all classes is 1:  
-  \[
+- Each $ \text{softmax}(\mathbf{z})_i \in (0, 1) $.
+- The sum across all classes is 1:
+
+  $$
   \sum_{i=1}^{K} \text{softmax}(\mathbf{z})_i = 1
-  \]
-- Softmax preserves the **order** of scores: if \(z_i > z_j\), then \(\text{softmax}(z)_i > \text{softmax}(z)_j\).  
-- Softmax is **invariant to constant shifts**: adding the same constant \(c\) to all logits doesn’t change the output:
-  \[
+  $$
+
+- Softmax preserves the **order** of scores:  
+  If $ z_i > z_j $, then $ \text{softmax}(\mathbf{z})_i > \text{softmax}(\mathbf{z})_j $.
+- Softmax is **invariant to constant shifts**:  
+  Adding the same constant $ c $ to all logits doesn’t change the output:
+
+  $$
   \text{softmax}(\mathbf{z} + c) = \text{softmax}(\mathbf{z})
-  \]  
-  This helps with numerical stability. :contentReference[oaicite:2]{index=2}
+  $$
 
-One common trick for numerical stability is:
+  This is useful for numerical stability.
 
-\[
+**One common trick for numerical stability is:**
+
+$$
 \text{softmax}(\mathbf{z})_i = \frac{e^{z_i - \max(\mathbf{z})}}{\sum_{j} e^{z_j - \max(\mathbf{z})}}
-\]
+$$
 
-This avoids overflow from large exponentials. :contentReference[oaicite:3]{index=3}
+This avoids overflow from large exponentials.
+
 
 ### Code Example (Python / NumPy)
 
