fix  activation function maxjext

--- a/_posts/2025-10-11-welcome.md
+++ b/_posts/2025-10-11-welcome.md
@@ -155,9 +155,9 @@ Here are a few widely used ones:
 
 | Activation | Formula | Range | Pros / Use Cases |
 |------------|---------|-------|------------------|
-| **Sigmoid** | \( \sigma(z) = \frac{1}{1 + e^{-z}} \) | (0, 1) | Good for binary probabilities; saturates at extremes |
-| **Tanh** | \( \tanh(z) = \frac{e^z - e^{-z}}{e^z + e^{-z}} \) | (−1, 1) | Zero‑centered, often better convergence than sigmoid |
-| **ReLU (Rectified Linear Unit)** | \( \mathrm{ReLU}(z) = \max(0, z) \) | [0, ∞) | Simpler, less vanishing gradient, commonly used in hidden layers |
+| **Sigmoid** | $ \sigma(z) = \frac{1}{1 + e^{-z}} $ | (0, 1) | Good for binary probabilities; saturates at extremes |
+| **Tanh** | $ \tanh(z) = \frac{e^z - e^{-z}}{e^z + e^{-z}} $ | (−1, 1) | Zero‑centered, often better convergence than sigmoid |
+| **ReLU (Rectified Linear Unit)** | $ \mathrm{ReLU}(z) = \max(0, z) $ | [0, ∞) | Simpler, less vanishing gradient, commonly used in hidden layers |
 
 ### Example Code
 
